<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/banner"
    style="@style/Widget.AppTheme.Banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/offline_mode"
    android:visibility="gone"
    tools:visibility="visible"
    android:gravity="center"
    android:paddingVertical="4dp"
    android:background="@drawable/offline_banner_background"/>